--- a/css/styles.css
+++ b/css/styles.css
@@ -8,73 +8,35 @@ html{
     background-attachment: fixed;
 }
 #global{
-	width: 85%;
+	width: 95%;
 	margin: 0px auto;
-	margin-top: 20px;
-	padding: 25px;
-	background: rgb(214, 65, 65,0.7);
-	box-shadow: 0px 0px 2px #ccc ;
-    
+	margin-top: 5px;
+	padding: 5px;
+	background: rgba(0, 0, 0, 0.7);
 	}
 /* .clearfix{.
 	float: none;
 	clear: both;
 } */
-#logo{
-	font-family: Verdana,Arial;
-	font-size: 24px;
-	letter-spacing: 4px;
-	background: #363636;
-	color: white;
-	text-align: center;
-	width: 40%;
-	height: 80px;
-	float: left;
-	margin-bottom: 20px;
-	line-height: 75px;
-	text-transform: uppercase;
-	/* border: 1px solid white; */
-}
-
-#menu{
-	font-family: Helvetica,Arial;
-    color: ivory;
-	background: rgb(34, 34, 34,0.7);
-	width: 59%;
-    height: 85px;
-    float: right;
-    margin-bottom: 20px;
-	text-transform: uppercase;
-    font-size: 20px;
-}
-#menu ul{
-	line-height: 20px;
-    margin-right: 35px;
-	list-style: none;
-    /* float: right; */
-}
-#menu li{
-	height: 46px;
-	display: inline-block;
-    margin-left: 30px;;
-	transition: all 300ms;
-}
 #redes{
-    float: right;
-    /* border: 1px solid white; */
+	position: fixed;
+	top: 30%;
+	background: rgba(51,51,51,0.5);
+	margin-bottom: 100px;
+	width: 0%;
+	height: 20%;
+	padding: 10px;
+	border-radius: 2px;
+	margin-bottom: 10px;
+	margin-top: 5px;
 }
 #link,
 #git,
 #web{
-    float: right;
-    width: 25px;
-	height: 25px;
-	/* border: 1px solid white; */
 	display: block;
 	margin: 0px auto;
-	/* margin-top: 2px; */
-	margin-bottom: 50px;
-    margin-right: 2px;
+	margin-top: 5px;
+	margin-bottom: 5px;
 	cursor: pointer;
 }
 #link{
@@ -86,8 +48,56 @@ html{
 #web{
 	background: #a11b1b;
 }
+#header{
+	background: #922e2e;
+}
+#logo{
+	font-family: Verdana,Arial;
+	font-size: 24px;
+	letter-spacing: 4px;
+	background: rgba(0, 0, 0, .85);
+	color: rgba(97, 97, 97, 0.85);
+	text-align: center;
+	width: 40.9%;
+	height: 65px;
+	float: left;
+	margin-bottom: 20px;
+	line-height: 75px;
+	text-transform: uppercase;
+	border-right: 1px solid rgb(5, 5, 5);
+}
+#menu{
+	font-family: Helvetica,Arial;
+    color: ivory;
+	background: rgba(0, 0, 0, .85);
+	width: 58.7%;
+	height: 65px;
+    float: right;
+    margin-bottom: 20px;
+	text-transform: uppercase;
+    font-size: 20px;
+	border-right: 3px solid rgb(5, 5, 5) ;
+}
+#menu ul{
+	line-height: 76px;
+	list-style: none;
+}
+#menu li{
+	height: 46px;
+	display: inline-block;
+	transition: all 300ms;
+	
+}
+#menu a{
+	display: block;
+	color: rgba(97, 97, 97, 0.85);
+	text-decoration: none;
+	padding-left: 30px;
+	padding-right: 30px;
+}
+
 #slider{
-    background:#363636;
+    /* background:#363636; */
 }
 #banner{
 	/* background: rgb(255, 0, 0); */
@@ -97,4 +107,61 @@ html{
   	align-items: center;
 	width: 100%;
 } 
+#general1,
+#general2{
+	margin-top: 10px;
+	text-align: center;
+	display: inline-block;
+	display: flex!important;
+	background: slategray;
+}
+#Cuadrado1{
+	margin-top: 20px;
+	margin-left: 40px;
+	margin-right: 40px;
+	background: royalblue;
+	width: 50%;
+	height: 50%;
+}
+#TextCudrado1{
+	background: white;
+}
+#TextCudrado1 h2{
+	background: tomato;
+}
+#Cuadrado2{
+	margin-top: 20px;
+	background: rgb(83, 83, 83);
+	width: 50%;
+	height: 50%;
+	margin-left: 40px;
+	margin-right: 40px;
+}
+#TextCudrado2{
+	background: rgb(228, 228, 228);
+}
+#TextCudrado2 h2{
+	background: rgb(49, 53, 255);
+}
 
+#Cuadrado3{
+	margin-top: 20px;
+	margin-left: 40px;
+	margin-right: 40px;
+	background: royalblue;
+	width: 50%;
+	height: 50%;
+}
+
+
+#Cuadrado4{
+	margin-top: 20px;
+	background: rgb(83, 83, 83);
+	width: 50%;
+	height: 50%;
+	margin-left: 40px;
+	margin-right: 40px;
+}
+
+
+/* https://getbootstrap.com/docs/4.6/examples/product/ */
